Address bug 692211; byteswap.h not present on FreeBSD.

After googling it seems like the correct thing to do is to use gcc builtin
intrinsics for byteswapping from 4.3 upwards, and to use byteswap.h
for all other versions of gcc >= 2.0. This should address the problem.